--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ services:
             - "50000:50000"
         volumes:
             - jenkins_home:/var/jenkins_home
+            - "/home/bibishanpandey/Downloads/3rd Sem/DevOps/devops-exercise4:/var/jenkins_home/devops-exercise4"
         environment:
             JENKINS_OPTS: --httpPort=8080
+            JAVA_OPTS: "-Dhudson.plugins.git.GitSCM.ALLOW_LOCAL_CHECKOUT=true"
         networks:
             - sonar-network
 
