--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,6 +21,8 @@ jobs:
                   TF_VAR_ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
                   TF_VAR_ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
                   TF_VAR_ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+                  TF_VAR_GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+                  TF_VAR_GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
               run: terraform init
 
             - name: Terraform plan
@@ -29,6 +31,8 @@ jobs:
                   TF_VAR_ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
                   TF_VAR_ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
                   TF_VAR_ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+                  TF_VAR_GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+                  TF_VAR_GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
               run: |
                   terraform plan -input=false
 
@@ -38,6 +42,8 @@ jobs:
                   TF_VAR_ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
                   TF_VAR_ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
                   TF_VAR_ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+                  TF_VAR_GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
+                  TF_VAR_GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
               run: |
                   az login --service-principal --username $TF_VAR_ARM_CLIENT_ID --password $TF_VAR_ARM_CLIENT_SECRET --tenant $TF_VAR_ARM_TENANT_ID
                   terraform import -input=false azurerm_resource_group.rg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-rg
