--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,13 +46,14 @@ jobs:
                   TF_VAR_GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
               run: |
                   az login --service-principal --username $TF_VAR_ARM_CLIENT_ID --password $TF_VAR_ARM_CLIENT_SECRET --tenant $TF_VAR_ARM_TENANT_ID
-                  terraform import -input=false azurerm_resource_group.rg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-rg
-                  terraform import -input=false azurerm_virtual_network.vnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vnet
-                  terraform import -input=false azurerm_subnet.subnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-subnet
-                  terraform import -input=false azurerm_public_ip.public_ip /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-public-ip
-                  terraform import -input=false azurerm_network_interface.nic /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nic
-                  terraform import -input=false azurerm_network_security_group.nsg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nsg
-                  terraform import -input=false azurerm_linux_virtual_machine.vm /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vm
-
+                  
+                  # Check if resource exists in state before importing
+                  terraform state list | grep -q 'azurerm_resource_group.rg' || terraform import azurerm_resource_group.rg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-rg
+                  terraform state list | grep -q 'azurerm_virtual_network.vnet' || terraform import azurerm_virtual_network.vnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vnet
+                  terraform state list | grep -q 'azurerm_subnet.subnet' || terraform import azurerm_subnet.subnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-subnet
+                  terraform state list | grep -q 'azurerm_public_ip.public_ip' || terraform import azurerm_public_ip.public_ip /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-public-ip
+                  terraform state list | grep -q 'azurerm_network_interface.nic' || terraform import azurerm_network_interface.nic /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nic
+                  terraform state list | grep -q 'azurerm_network_security_group.nsg' || terraform import azurerm_network_security_group.nsg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nsg
+                  terraform state list | grep -q 'azurerm_linux_virtual_machine.vm' || terraform import azurerm_linux_virtual_machine.vm /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vm
 
                   terraform apply -input=false -auto-approve
