--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,14 +46,27 @@ jobs:
                   TF_VAR_GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
               run: |
                   az login --service-principal --username $TF_VAR_ARM_CLIENT_ID --password $TF_VAR_ARM_CLIENT_SECRET --tenant $TF_VAR_ARM_TENANT_ID
-                  
-                  # Check if resource exists in state before importing
-                  terraform state list | grep -q 'azurerm_resource_group.rg' || terraform import azurerm_resource_group.rg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-rg
-                  terraform state list | grep -q 'azurerm_virtual_network.vnet' || terraform import azurerm_virtual_network.vnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vnet
-                  terraform state list | grep -q 'azurerm_subnet.subnet' || terraform import azurerm_subnet.subnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-subnet
-                  terraform state list | grep -q 'azurerm_public_ip.public_ip' || terraform import azurerm_public_ip.public_ip /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-public-ip
-                  terraform state list | grep -q 'azurerm_network_interface.nic' || terraform import azurerm_network_interface.nic /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nic
-                  terraform state list | grep -q 'azurerm_network_security_group.nsg' || terraform import azurerm_network_security_group.nsg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nsg
-                  terraform state list | grep -q 'azurerm_linux_virtual_machine.vm' || terraform import azurerm_linux_virtual_machine.vm /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vm
 
+                  # Check if resource group exists in Azure and import if exists
+                  az resource show --id "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-rg" &>/dev/null && terraform import azurerm_resource_group.rg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-rg || echo "Resource azurerm_resource_group.rg does not exist"
+
+                  # Check if virtual network exists in Azure and import if exists
+                  az resource show --id "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vnet" &>/dev/null && terraform import azurerm_virtual_network.vnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vnet || echo "Resource azurerm_virtual_network.vnet does not exist"
+
+                  # Check if subnet exists in Azure and import if exists
+                  az resource show --id "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-subnet" &>/dev/null && terraform import azurerm_subnet.subnet /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-subnet || echo "Resource azurerm_subnet.subnet does not exist"
+
+                  # Check if public IP exists in Azure and import if exists
+                  az resource show --id "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-public-ip" &>/dev/null && terraform import azurerm_public_ip.public_ip /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-public-ip || echo "Resource azurerm_public_ip.public_ip does not exist"
+
+                  # Check if network interface exists in Azure and import if exists
+                  az resource show --id "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nic" &>/dev/null && terraform import azurerm_network_interface.nic /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nic || echo "Resource azurerm_network_interface.nic does not exist"
+
+                  # Check if network security group exists in Azure and import if exists
+                  az resource show --id "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nsg" &>/dev/null && terraform import azurerm_network_security_group.nsg /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-nsg || echo "Resource azurerm_network_security_group.nsg does not exist"
+
+                  # Check if virtual machine exists in Azure and import if exists
+                  az resource show --id "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vm" &>/dev/null && terraform import azurerm_linux_virtual_machine.vm /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/nodeapp-vm || echo "Resource azurerm_linux_virtual_machine.vm does not exist"
+
+                  # Apply Terraform
                   terraform apply -input=false -auto-approve
