--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             SONAR_JDBC_URL: jdbc:postgresql://sonar_db:5432/sonar
             SONAR_JDBC_USERNAME: sonar
             SONAR_JDBC_PASSWORD: sonar
-            SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: true
+            SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: "true"
         ports:
             - "9000:9000"
         volumes:
