Update Jenkinsfile and add custom registry for npm

--- a/.github/workflows/terraform-init.yml
+++ b/.github/workflows/terraform-init.yml
@@ -1,9 +1,12 @@
 name: Set up Terraform
 
+# on:
+#     push:
+#         branches:
+#             - master
+# This trigger allows you to manually execute the pipeline
 on:
-    push:
-        branches:
-            - master
+    workflow_dispatch:
 
 jobs:
     terraform:
